<resources>
    <string name="app_name">MEET_UP_PROJECT</string>
    <string name="log_in">Log In</string>
    <string name="mail">E@mail.com</string>
    <string name="dont">If you don\'t have an accout</string>
    <string name="Sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="Mail">Email</string>
    <string name="password">Password</string>
    <string name="interest">Choose Interest</string>
    <string name="football">Football</string>
    <string name="cricket">Cricket</string>
    <string name="set_profile">Set Up</string>
    <string name="change_img">Change Image</string>
    <string name="home">HOME</string>
    <string name="friend">Friends</string>
    <string name="friends">FRIENDS</string>
    <string name="profile">PROFILE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="tag">TAG</string>
    <string name="send">Send</string>
    <string name="time">00:00</string>
    <string name="message">Message</string>
</resources>