<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO: Update blank fragment layout -->

        <de.hdodenhof.circleimageview.CircleImageView

            android:id="@+id/profile_image"
            android:layout_width="179dp"
            android:layout_height="154dp"

            android:layout_centerHorizontal="true"
            android:layout_marginStart="116dp"
            android:layout_marginLeft="116dp"
            android:clickable="true"
            android:elevation="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile"
            />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="40dp"
            android:hint="@string/name"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <Button
            android:id="@+id/edit_profile"
            android:layout_width="wrap_content"
            android:textSize="10sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/edit_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile_name"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            app:layout_constraintVertical_bias="0.053" />

        <TextView
            android:id="@+id/profile_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="40dp"
            android:hint="@string/tag"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>