<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <de.hdodenhof.circleimageview.CircleImageView

                    android:id="@+id/other_profile_image"
                    android:layout_width="50dp"
                    android:layout_height="54dp"

                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="26dp"
                    android:layout_marginLeft="26dp"
                    android:clickable="true"
                    android:elevation="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile"
                    />
                <TextView
                    android:id="@+id/profiles_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/project_id"
                    android:textSize="0sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <TextView
                    android:id="@+id/other_profile_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/tag"
                    app:layout_constraintStart_toEndOf="@+id/other_profile_image"
                    app:layout_constraintTop_toBottomOf="@+id/other_profile_name" />

                <TextView
                    android:id="@+id/other_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/name"
                    app:layout_constraintStart_toEndOf="@+id/other_profile_image"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/message_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:textSize="12sp"
                    android:text="@string/message"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.907"
                    app:layout_constraintStart_toEndOf="@+id/other_profile_name"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>